--- a/src/pages/authenticated/EditJob/style.sass
+++ b/src/pages/authenticated/EditJob/style.sass
@@ -2,6 +2,26 @@
   &__Container
     padding: 20px 10px 0px
 
+    &__Forms
+      display: flex
+      flex-direction: column
+      min-height: calc(100vh - 105px)
+      width: 100%
+
+    &__Input
+      margin-bottom: 24px
+
+      &:nth-of-type(2)
+        margin-bottom: 0
+
+    &__Button
+      display: flex
+      justify-content: center
+
+      &__Wrapper
+        width: 240px
+
+
   &__Text
     display: flex
     flex-direction: column
@@ -16,19 +36,4 @@
       justify-content: flex-end
       margin: 10px
 
-  &__Forms
-    display: flex
-    flex-direction: column
 
-    &__Input
-      margin-bottom: 24px
-
-      &:nth-of-type(2)
-        margin-bottom: 0
-
-    &__Button
-      display: flex
-      justify-content: center
-
-      &__Wrapper
-        width: 240px
